# ModernCppSoundex

./: .gitignore  CMakeLists.txt  README.md  SoundexTest.cpp
libsoundex/: CMakeLists.txt  SoundexEncoder.cpp  SoundexEncoder.h  charutil.cpp  charutil.h  soundex.cpp  soundex.h  stringutil.cpp  stringutil.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testlibsoundex/: CMakeLists.txt  SoundexTest.cpp  charutiltest.cpp  stringutiltest.cpp
